--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,17 @@ commands=
     py.test --cov={envsitepackagesdir}/pydblite --cov-report html --cov-report=term-missing
 	#py.test --cov-config {toxinidir}/.coveragerc --cov=pydblite --cov-report=html --cov-report=term-missing {toxinidir}/tests
 
+[testenv:py26]
+basepython=python2.6
+commands=
+    py.test
+
 [testenv:py27]
+commands=
+    py.test
+
+[testenv:py33]
+basepython=python3.3
 commands=
     py.test
 
