--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,8 @@ env:
   - TOX_ENV=py33
   - TOX_ENV=py34
   - TOX_ENV=pep8
+  - TOX_ENV=flake8
+  - TOX_ENV=docs
+  - TOX_ENV=testcoverage
 script:
   - tox -e $TOX_ENV
