--- a/tox.ini
+++ b/tox.ini
@@ -5,16 +5,15 @@
 
 # Settings for py.test and tox
 [tox]
-envlist = py27, py34, pep8, docs
+envlist = py27, py34, pep8, flake8, docs, testcoverage
 
 [testenv]
 commands = {envpython} setup.py test
 norecursedirs=.tox .git dist
 deps =
     pytest
-    coverage
-    pytest-cov
-	pytest-pep8
+whitelist_externals=
+    py.test
 
 [pytest]
 python_functions=test_
@@ -24,10 +23,14 @@ pep8ignore =
 		   docs/source/conf.py ALL
 
 [testenv:testcoverage]
-#changedir={envsitepackagesdir}
+deps =
+    {[testenv]deps}
+    coverage
+    pytest-cov
 commands=
-    py.test --cov={envsitepackagesdir}/pydblite --cov-report html --cov-report=term-missing
-	#py.test --cov-config {toxinidir}/.coveragerc --cov=pydblite --cov-report=html --cov-report=term-missing {toxinidir}/tests
+    coverage run --branch --source=pydblite -m py.test tests
+    coverage report
+    coverage html -d docs/build/htmlcoverage
 
 [testenv:py26]
 basepython=python2.6
@@ -49,8 +52,22 @@ commands=
     py.test
 
 [testenv:pep8]
+deps =
+    {[testenv]deps}
+	pytest-pep8
 commands=
     py.test --pep8
+
+[testenv:flake8]
+whitelist_externals=
+    {[testenv]whitelist_externals}
+    flake8
+deps =
+    {[testenv]deps}
+    flake8
+    pep8-naming
+commands=
+    flake8 pydblite
 
 [testenv:docs]
 # touch and mkdir is not installed in virtualenv, so ask it to ignore that.
