--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,9 @@ env:
   - TOX_ENV=py34
   - TOX_ENV=pep8
   - TOX_ENV=flake8
+  - TOX_ENV=flake8-complexity
   - TOX_ENV=docs
   - TOX_ENV=testcoverage
+
 script:
   - tox -e $TOX_ENV
