Fix flake8 warnings

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@
 [flake8]
 max-line-length = 100
 exclude = .tox,dist,build
-ignore = E123,E133,E226,E241,E242,N812
+ignore = E133
 builtins = basestring
 
 # Settings for py.test and tox
@@ -40,7 +40,7 @@ commands=
 
 [testenv:pydef]
 commands=
-    py.test pydblite
+    py.test
 
 [testenv:py26]
 basepython=python2.6
