Added link to unit test coverage on github pages in sphinx docs

--- a/docs/themes/pydbtheme/theme.conf
+++ b/docs/themes/pydbtheme/theme.conf
@@ -3,6 +3,7 @@ inherit = cloud
 [options]
 pydb_download_link = http://sourceforge.net/project/platformdownload.php?group_id=210258
 pydb_github_link = https://github.com/PierreQuentel/PyDbLite
+pydb_tests_coverage_link = http://PierreQuentel.github.io/PyDbLite/
 pydb_mailinglist_link = http://groups.google.com/group/pydblite
 
 sidebarwidth   = 240px
