Added isort target for travis and ordered import statements

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,3 +2,13 @@
 source-dir = docs/source
 build-dir = docs/build
 all_files = 1
+
+[metadata]
+description-file = README.rst
+
+[isort]
+known_standard_library=unicodedata
+line_length=100
+known_first_party=pydblite
+known_third_party=setuptools
+order_by_type=true
