--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
   - TOX_ENV=py33
   - TOX_ENV=py34
   - TOX_ENV=pep8
+  - TOX_ENV=isort
   - TOX_ENV=flake8
   - TOX_ENV=flake8-complexity
   - TOX_ENV=docs
