--- a/tox.ini
+++ b/tox.ini
@@ -101,6 +101,13 @@ deps =
 commands=
     sh -c "flake8 --max-complexity=10 pydblite || true"
 
+[testenv:isort]
+deps =
+    isort
+whitelist_externals =
+    isort
+commands = python -c "import subprocess, sys; output = subprocess.check_output('isort --stdout --diff --recursive pydblite tests *.py', shell=True); print output; sys.exit(len(output) != 0)"
+
 [testenv:docs]
 # touch and mkdir is not installed in virtualenv, so ask it to ignore that.
 whitelist_externals=
