--- a/docs/Makefile
+++ b/docs/Makefile
@@ -23,29 +23,32 @@ I18NSPHINXOPTS  = $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) source
 
 help:
 	@echo "Please use \`make <target>' where <target> is one of"
-	@echo "  html        to make standalone HTML files"
-	@echo "  dirhtml     to make HTML files named index.html in directories"
-	@echo "  singlehtml  to make a single large HTML file"
-	@echo "  pickle      to make pickle files"
-	@echo "  json        to make JSON files"
-	@echo "  htmlhelp    to make HTML files and a HTML help project"
-	@echo "  qthelp      to make HTML files and a qthelp project"
-	@echo "  devhelp     to make HTML files and a Devhelp project"
-	@echo "  epub        to make an epub"
-	@echo "  latex       to make LaTeX files, you can set PAPER=a4 or PAPER=letter"
-	@echo "  latexpdf    to make LaTeX files and run them through pdflatex"
-	@echo "  latexpdfja  to make LaTeX files and run them through platex/dvipdfmx"
-	@echo "  text        to make text files"
-	@echo "  man         to make manual pages"
-	@echo "  texinfo     to make Texinfo files"
-	@echo "  info        to make Texinfo files and run them through makeinfo"
-	@echo "  gettext     to make PO message catalogs"
-	@echo "  changes     to make an overview of all changed/added/deprecated items"
-	@echo "  xml         to make Docutils-native XML files"
-	@echo "  pseudoxml   to make pseudoxml-XML files for display purposes"
-	@echo "  linkcheck   to check all external links for integrity"
-	@echo "  doctest     to run all doctests embedded in the documentation (if enabled)"
-	@echo "  doccoverage to generate doc coverage"
+	@echo "  html           to make standalone HTML files"
+	@echo "  dirhtml        to make HTML files named index.html in directories"
+	@echo "  singlehtml     to make a single large HTML file"
+	@echo "  pickle         to make pickle files"
+	@echo "  json           to make JSON files"
+	@echo "  htmlhelp       to make HTML files and a HTML help project"
+	@echo "  qthelp         to make HTML files and a qthelp project"
+	@echo "  devhelp        to make HTML files and a Devhelp project"
+	@echo "  epub           to make an epub"
+	@echo "  latex          to make LaTeX files, you can set PAPER=a4 or PAPER=letter"
+	@echo "  latexpdf       to make LaTeX files and run them through pdflatex"
+	@echo "  latexpdfja     to make LaTeX files and run them through platex/dvipdfmx"
+	@echo "  text           to make text files"
+	@echo "  man            to make manual pages"
+	@echo "  texinfo        to make Texinfo files"
+	@echo "  info           to make Texinfo files and run them through makeinfo"
+	@echo "  gettext        to make PO message catalogs"
+	@echo "  changes        to make an overview of all changed/added/deprecated items"
+	@echo "  xml            to make Docutils-native XML files"
+	@echo "  pseudoxml      to make pseudoxml-XML files for display purposes"
+	@echo "  linkcheck      to check all external links for integrity"
+	@echo "  doctest        to run all doctests embedded in the documentation (if enabled)"
+	@echo "  doccoverage    to generate doc coverage"
+	@echo "  update-fr-po   to update the french translated po files"
+	@echo "  html-fr        to build html with french translation"
+
 
 clean:
 	rm -rf $(BUILDDIR)/*
@@ -169,6 +172,13 @@ doctest:
 
 doccoverage:
 	$(SPHINXBUILD) -b coverage $(ALLSPHINXOPTS) $(BUILDDIR)/doccoverage
+
+update-fr-po: gettext
+	sphinx-intl update -c source/conf.py -p $(BUILDDIR)/locale -l fr
+
+html-fr:
+	sphinx-intl --config=source/conf.py build
+	make -e SPHINXOPTS="-D language='fr'" html
 
 xml:
 	$(SPHINXBUILD) -b xml $(ALLSPHINXOPTS) $(BUILDDIR)/xml
