--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,7 @@ deps =
     pytest
 whitelist_externals=
     py.test
+
 [pytest]
 python_functions=test_
 norecursedirs=.tox .git dist build *egg
@@ -56,19 +57,15 @@ commands=
 
 [testenv:py33]
 basepython=python3.3
-sitepackages=True
 setenv =
     PYENV_VERSION=3.3.5
-    PYTHONPATH=
 commands=
     {[testenv:pydef]commands}
 
 [testenv:py34]
 basepython=python3.4
-sitepackages=True
 setenv =
     PYENV_VERSION=3.4.1
-    PYTHONPATH=
 commands=
     {[testenv:pydef]commands}
 
@@ -120,10 +117,11 @@ deps =
     sphinx
     sphinxcontrib-inlinesyntaxhighlight
     sphinxcontrib-fulltoc
+    sphinxcontrib-restbuilder
     cloud_sptheme
 commands=
     mkdir -p build/doccoverage
     touch build/doccoverage/python.txt
-    sphinx-build -W -b coverage -d build/doctrees source build/doccoverage
+    sphinx-build -b coverage -d build/doctrees source build/doccoverage
     py.test --doctest-glob='*.rst'
-    sphinx-build -W -b html -d build/doctrees source build/html
+    sphinx-build -b html -d build/doctrees source build/html
