--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ pep8ignore =
 [testenv:testcoverage]
 deps =
     {[testenv]deps}
-    coverage
+    coverage<=3.7.1
     pytest-cov
 commands=
     coverage run --branch --source=pydblite -m py.test tests
@@ -56,9 +56,9 @@ commands=
     {[testenv:pydef]commands}
 
 [testenv:py33]
-basepython=python3.3
+basepython=python
 setenv =
-    PYENV_VERSION=3.3.5
+    PYENV_VERSION=3.3.6
 commands=
     {[testenv:pydef]commands}
 
