--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,9 @@ all_files = 1
 [metadata]
 description-file = README.rst
 
+[bdist_wheel]
+universal=1
+
 [isort]
 known_standard_library=unicodedata
 line_length=100
