--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,13 @@
 # in multiple virtualenvs. This configuration file will run the
 # test suite on all supported python versions. To use it, "pip install tox"
 # and then run "tox" from this directory.
-
+#
+# To run tests locally with multiple python versions using tox, install the
+# different python versions through pyenv. Then specify the python versions
+# installed with pyenv in the shell before running the tests, e.g. like this:
+# $ pyenv local  2.6.7  2.7.5  3.3  3.4.1
+# $ tox
+#
 [flake8]
 max-line-length = 100
 exclude = .tox,dist,build
@@ -33,10 +39,9 @@ pep8ignore =
 deps =
     {[testenv]deps}
     coverage<=3.7.1
-    pytest-cov
 commands=
-    coverage run --branch --source=pydblite -m py.test tests
-    coverage report
+    coverage run --branch  -m pytest tests
+    coverage report --include="pydblite*,tests*"
     coverage html -d docs/build/htmlcoverage
 
 [testenv:pydef]
@@ -45,8 +50,6 @@ commands=
 
 [testenv:py26]
 basepython=python2.6
-setenv =
-    PYENV_VERSION=2.6.9
 commands=
     {[testenv:pydef]commands}
 
@@ -57,15 +60,11 @@ commands=
 
 [testenv:py33]
 basepython=python
-setenv =
-    PYENV_VERSION=3.3.6
 commands=
     {[testenv:pydef]commands}
 
 [testenv:py34]
 basepython=python3.4
-setenv =
-    PYENV_VERSION=3.4.1
 commands=
     {[testenv:pydef]commands}
 
@@ -106,6 +105,8 @@ whitelist_externals =
 commands = python -c "import subprocess, sys; output = subprocess.check_output('isort --stdout --diff --recursive pydblite tests *.py', shell=True); print output; sys.exit(len(output) != 0)"
 
 [testenv:docs]
+# sphinxcontrib/restbuilder does not support python 3, so force python 2.7
+basepython=python2.7
 # touch and mkdir is not installed in virtualenv, so ask it to ignore that.
 whitelist_externals=
     touch
