--- a/tox.ini
+++ b/tox.ini
@@ -119,6 +119,7 @@ deps =
     sphinxcontrib-inlinesyntaxhighlight
     sphinxcontrib-fulltoc
     sphinxcontrib-restbuilder
+    sphinxcontrib-issuetracker
     cloud_sptheme
 commands=
     mkdir -p build/doccoverage
