--- a/tox.ini
+++ b/tox.ini
@@ -102,7 +102,7 @@ deps =
     isort
 whitelist_externals =
     isort
-commands = python -c "import subprocess, sys; output = subprocess.check_output('isort --stdout --diff --recursive pydblite tests *.py', shell=True); print output; sys.exit(len(output) != 0)"
+commands = python -c "import subprocess, sys; output = subprocess.check_output('isort -q --stdout --diff --recursive pydblite tests *.py', shell=True); print output; sys.exit(len(output) != 0)"
 
 [testenv:docs]
 # sphinxcontrib/restbuilder does not support python 3, so force python 2.7
